tests/paczka1/fuzzy1/66439017.err
Error in line 3: 7Nx A924 9,5
Error in line 4: 7Nx S432 32,3
Error in line 13: AUJXI2osSb A773 48,27
Error in line 15: 5pUMZqZI S432 5,0
Error in line 5: 7Nx A773 23,9
Error in line 24: 7Nx A924 24,0
Error in line 26: 7Nx A773 93,2
Error in line 20: S432 S50 20,7
Error in line 36: 5pUMZqZI A773 50,3
